--- a/marion/css/style.scss
+++ b/marion/css/style.scss
@@ -9,3 +9,8 @@
 @import "mainPage";
 @import "about";
 @import "contact";
+@import "prod";
+@import "cat";
+@import "serv";
+@import "det";
+@import "port";
