--- a/marion/css/_mainPage.scss
+++ b/marion/css/_mainPage.scss
@@ -109,6 +109,40 @@
 .frontProd{
   background-color: $dark;
   color: $white;
+  &__imgW{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    @include media-breakpoint-down(md) {
+      height: 400px;
+      margin-bottom: 40px;
+    }
+    img{
+      position: absolute;
+      top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;
+    }
+  }
+  &__wrap{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 40px -25px;
+  }
+  &__item{
+    width: calc(50% - 50px);
+    margin: 25px;
+    padding: 40px;
+    border: 1px solid $white;
+    display: flex;
+    flex-direction: column;
+    .h4{
+      margin-bottom: 70px;
+    }
+    &:last-of-type{
+      width: calc(100% - 50px);
+    }
+    width: calc(100% - 50px);
+
+  }
 }
 
 .lent{
@@ -117,7 +151,7 @@
   padding: 33px 0;
   border-top: 1px solid;
   border-bottom: 1px solid;
-  box-shadow: 0px 0px 0px 10px $orange;
+  box-shadow: 0px 0px 0px 10px $whiteBg;
   z-index: 2;
   position: relative;
   .h3{
@@ -127,6 +161,12 @@
     margin: 0;
     padding: 0;
   }
+  &__white{
+    background-color: $whiteBg;
+    box-shadow: $whiteBg;
+    border-color: $dark;
+    color: $dark;
+  }
   &_orange{
     background-color: $orange;
     box-shadow: $orange;
@@ -134,3 +174,4 @@
     color: $whiteBg;
   }
 }
+
