--- a/marion/css/_serv.scss
+++ b/marion/css/_serv.scss
@@ -1,4 +1,4 @@
-.about{
+.serv1{
   &__imgW{
     position: relative;
     width: 100%;
@@ -12,18 +12,31 @@
       top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;
     }
   }
-  &__dark{
-    background-color: $dark;
-    color: $white;
+}
+.serv2{
+  &__white{
+    background-color: $white;
     position: relative;
     &::after{
-      content:'';
+      content: "";
       position: absolute;
-      top: -69px;
+      top: -100px;
       left: 0;
       width: 100%;
-      height: 70px;
-      background-color: $dark;
+      height: 110px;
+      background-color: $white;
+    }
+  }
+}
+.list{
+  &__item{
+    display: flex;
+    margin-bottom: 40px;
+    &::before{
+      content: "/";
+
+      margin-right: 15px;
+
     }
   }
 }
