--- a/standart/css/style.scss
+++ b/standart/css/style.scss
@@ -6,10 +6,10 @@
 @import "header";
 @import "footer";
 @import "mainPage";
-@import "about"; 
-@import "contact"; 
-@import "typObj"; 
-@import "prodCart"; 
-@import "prod"; 
-@import "cat"; 
-@import "rem"; 
+@import "about";
+@import "contact";
+@import "typObj";
+@import "prodCart";
+@import "proj";
+@import "cat";
+@import "rem";
