--- a/standart/css/_other.scss
+++ b/standart/css/_other.scss
@@ -8,3 +8,40 @@
 }
 
 
+.p404{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+  &__bg{
+    position: absolute;
+    top: 100px;
+    left: 25%;
+    width: 75%;
+    height: calc(100% - 100px);
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-image: url(../img/404bg.svg);
+    @include media-breakpoint-down(md) {
+      background-image: url(../img/404bgMd.svg);
+    }
+    @include media-breakpoint-down(sm) {
+      background-image: url(../img/404bgSm.svg)
+
+    }
+
+  }
+  &__line{
+    position: absolute;
+    bottom: 0;
+    left:0;
+    width: 100%;
+    height: 40px;
+    background-color: $orange;
+  }
+  &__orange{
+    background-color:$orange;
+  }
+}
