--- a/standart/css/style.css
+++ b/standart/css/style.css
@@ -7486,6 +7486,58 @@ input::placeholder {
   margin: 20px 0 !important;
 }
 
+.p404 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+}
+
+.p404__bg {
+  position: absolute;
+  top: 100px;
+  left: 25%;
+  width: 75%;
+  height: calc(100% - 100px);
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
+  background-image: url(../img/404bg.svg);
+}
+
+@media (max-width: 1024.98px) {
+  .p404__bg {
+    background-image: url(../img/404bgMd.svg);
+  }
+}
+
+@media (max-width: 767.98px) {
+  .p404__bg {
+    background-image: url(../img/404bgSm.svg);
+  }
+}
+
+.p404__line {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #EAAC0F;
+}
+
+.p404__orange {
+  background-color: #EAAC0F;
+}
+
 .bgLeft {
   position: relative;
   overflow: hidden;
@@ -8339,6 +8391,186 @@ input::placeholder {
   background-size: cover;
 }
 
+.cont_white {
+  background-color: #F8F8F8;
+}
+
+.prBody {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.prBody__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.prBody__itemText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  position: relative;
+  z-index: 1;
+}
+
+.prBody__itemText svg {
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  margin-left: 10px;
+}
+
+@media (min-width: 768px) {
+  .prBody__item {
+    width: 25%;
+    position: relative;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024.98px) {
+  .prBody__item {
+    width: 33.3333%;
+  }
+}
+
+@media (min-width: 768px) {
+  .prBody__item::before {
+    content: '';
+    display: block;
+    padding-bottom: 100%;
+  }
+  .prBody__item > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 30px;
+  }
+  .prBody__item_big {
+    width: 50%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024.98px) {
+  .prBody__item_big {
+    width: 66.6666%;
+  }
+}
+
+@media (min-width: 768px) {
+  .prBody__item_big::before {
+    content: '';
+    display: block;
+    padding-bottom: 50%;
+  }
+  .prBody__item_circle {
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  .prBody__item_circle > * {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .prBody__item_black {
+    background-color: #363636;
+    color: #EDEDED;
+  }
+  .prBody__item_black svg {
+    fill: #EDEDED;
+  }
+  .prBody__item_orange {
+    background-color: #EAAC0F;
+    color: #363636;
+  }
+  .prBody__item_orange svg {
+    fill: #363636;
+  }
+  .prBody__item_gray {
+    background-color: #C9C9C9;
+    color: #363636;
+  }
+  .prBody__item_gray svg {
+    fill: #363636;
+  }
+  .prBody__item_white {
+    background-color: #E9E9E9;
+    color: #363636;
+  }
+  .prBody__item_white svg {
+    fill: #363636;
+  }
+  .prBody__item_border {
+    border: 1px solid #363636;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .prBody__item {
+    width: 100%;
+    border-top: 1px solid #363636;
+    color: #343a40;
+    padding: 30px 0;
+    margin: 0 4.16vw;
+  }
+  .prBody__item p {
+    text-align: left !important;
+  }
+  .prBody__item svg {
+    display: none;
+  }
+  .prBody__item img {
+    display: none;
+  }
+}
+
+.prBody__svg_orange {
+  fill: #EAAC0F;
+}
+
+@media (min-width: 768px) {
+  .prBody__textTop {
+    -webkit-transform: translate(-30px, calc(-100% - 50px));
+            transform: translate(-30px, calc(-100% - 50px));
+    color: #363636;
+  }
+  .prBody__textBottom {
+    -webkit-transform: translate(-10px, calc(100% + 50px));
+            transform: translate(-10px, calc(100% + 50px));
+    color: #363636;
+  }
+}
+
 .rFirst {
   position: relative;
 }
@@ -8398,8 +8630,196 @@ input::placeholder {
           justify-content: flex-end;
 }
 
-.rSevr {
+.rServ {
   background-color: #2B2B2E;
   color: #C9C9C9;
+}
+
+.rServ__wrap {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 0;
+  margin: 0;
+}
+
+@media (max-width: 767.98px) {
+  .rServ__wrap {
+    -ms-grid-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.rServ__item {
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.rServ__item * {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.rServ__item > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.rServ__item::after {
+  content: "";
+  display: block;
+  padding-bottom: 80%;
+}
+
+.rServ__item_1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  background-color: #C9C9C9;
+  color: #343a40;
+}
+
+@media (min-width: 768px) and (max-width: 1024.98px) {
+  .rServ__item_1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
+    -ms-grid-row: 1;
+    grid-row: 1;
+  }
+  .rServ__item_1::after {
+    content: "";
+    display: block;
+    padding-bottom: 40%;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .rServ__item_1 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 1;
+    grid-row: 1;
+  }
+}
+
+.rServ__item_1 svg {
+  fill: #343a40;
+}
+
+.rServ__item_2 {
+  -ms-grid-column: 3;
+  grid-column: 3;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  background-color: #2B2B2E;
+  color: #C9C9C9;
+  border: 1px solid #C9C9C9;
+}
+
+@media (min-width: 768px) and (max-width: 1024.98px) {
+  .rServ__item_2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .rServ__item_2 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+}
+
+.rServ__item_2 svg {
+  fill: #C9C9C9;
+}
+
+.rServ__item_3 {
+  -ms-grid-column: 4;
+  grid-column: 4;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  background-color: #363636;
+  color: #EDEDED;
+}
+
+@media (min-width: 768px) and (max-width: 1024.98px) {
+  .rServ__item_3 {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3 / 5;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .rServ__item_3 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 3;
+    grid-row: 3;
+  }
+}
+
+.rServ__item_3 svg {
+  fill: #EDEDED;
+}
+
+.rServ__item:hover {
+  background-color: #EAAC0F;
+  color: #363636;
+}
+
+.rServ__item:hover svg {
+  fill: #363636;
+}
+
+.rServ__itemText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.rServ__itemText svg {
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  margin-left: 10px;
 }
 /*# sourceMappingURL=style.css.map */
