--- a/standart/css/style.css
+++ b/standart/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -7696,6 +7697,150 @@ input::placeholder {
 .t-d-1, .t-d-1::after, .t-d-1 > * {
   -webkit-transition-delay: 1s;
           transition-delay: 1s;
+}
+
+.prel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #363636;
+  z-index: 1000;
+  -webkit-transition: 0.8s ease-in-out;
+  transition: 0.8s ease-in-out;
+}
+
+.prel__wrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.prel__logo {
+  width: 300px;
+  position: relative;
+  overflow: hidden;
+}
+
+.prel__logo svg {
+  width: 100%;
+  height: auto;
+  opacity: 0;
+}
+
+.prel__logoО {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #EAAC0F;
+  -webkit-transform: translateX(-110%);
+          transform: translateX(-110%);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.prel__o {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #EAAC0F;
+  -webkit-transform: translateX(-110%);
+          transform: translateX(-110%);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 35px 0 25px 0;
+  border-top: 5px solid #EAAC0F;
+  border-bottom: 1px solid #363636;
+  z-index: 100;
+  background-color: #f8f8f8;
+}
+
+.header__menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.header__menu li {
+  padding: 0;
+  margin: 0;
+  margin-right: 30px;
+}
+
+.header__menu a {
+  padding: 0;
+  margin: 0;
+  white-space: nowrap;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 50;
+  background-color: #F8F8F8;
+  -webkit-transform: translateY(-110%);
+          transform: translateY(-110%);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.menu__svg {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  width: 25px;
+  height: auto;
+}
+
+.menuBg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 49;
+  background-color: rgba(54, 54, 54, 0.9);
+  -webkit-transform: translateY(-110%);
+          transform: translateY(-110%);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.openMenu .menu {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.openMenu .menuBg {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .linesFooter {
